Add support for replication in application.properties